--- a/Plugins/CsvExport/csvexport.qrc
+++ b/Plugins/CsvExport/csvexport.qrc
@@ -3,6 +3,7 @@
         <file>CsvExport.ui</file>
     </qresource>
     <qresource prefix="/msg">
+        <file>CsvExport_ro_RO.qm</file>
 
         <file>CsvExport_de.qm</file>
         <file>CsvExport_pl.qm</file>
@@ -12,5 +13,6 @@
         <file>CsvExport_zh_CN.qm</file>
     </qresource>
 </RCC>
+
 
 
