--- a/Plugins/SqlEnterpriseFormatter/sqlenterpriseformatter.qrc
+++ b/Plugins/SqlEnterpriseFormatter/sqlenterpriseformatter.qrc
@@ -3,6 +3,7 @@
         <file>sqlenterpriseformatter.ui</file>
     </qresource>
     <qresource prefix="/msg">
+        <file>SqlEnterpriseFormatter_ro_RO.qm</file>
         <file>SqlEnterpriseFormatter_de.qm</file>
 
 
@@ -13,6 +14,7 @@
         <file>SqlEnterpriseFormatter_zh_CN.qm</file>
     </qresource>
 </RCC>
+
 
 
 
