--- a/SQLiteStudio3/guiSQLiteStudio/guiSQLiteStudio.qrc
+++ b/SQLiteStudio3/guiSQLiteStudio/guiSQLiteStudio.qrc
@@ -1,5 +1,6 @@
 <RCC>
     <qresource prefix="/msg">
+        <file>translations/guiSQLiteStudio_ro_RO.qm</file>
         <file>translations/guiSQLiteStudio_pl.qm</file>
         <file>translations/guiSQLiteStudio_ru.qm</file>
         <file>translations/guiSQLiteStudio_fr.qm</file>
@@ -11,6 +12,7 @@
         <file>general.css</file>
     </qresource>
 </RCC>
+
 
 
 
