--- a/SQLiteStudio3/sqlitestudio/sqlitestudio.qrc
+++ b/SQLiteStudio3/sqlitestudio/sqlitestudio.qrc
@@ -1,5 +1,6 @@
 <RCC>
     <qresource prefix="/msg">
+        <file>translations/sqlitestudio_ro_RO.qm</file>
         <file>translations/sqlitestudio_de.qm</file>
         <file>translations/sqlitestudio_pl.qm</file>
         <file>translations/sqlitestudio_ru.qm</file>
@@ -8,6 +9,7 @@
         <file>translations/sqlitestudio_zh_CN.qm</file>
     </qresource>
 </RCC>
+
 
 
 
