--- a/SQLiteStudio3/sqlitestudio/register_file_types.ui
+++ b/SQLiteStudio3/sqlitestudio/register_file_types.ui
@@ -14,6 +14,9 @@
    <string>Form</string>
   </property>
   <layout class="QVBoxLayout" name="verticalLayout">
+   <property name="spacing">
+    <number>20</number>
+   </property>
    <item>
     <widget class="QCheckBox" name="RegisterFileCheckBox">
      <property name="text">
@@ -26,13 +29,32 @@
     </widget>
    </item>
    <item>
-    <widget class="QCheckBox" name="CreateStartMenuEntryCheckBox">
-     <property name="text">
+    <widget class="QGroupBox" name="CreateStartMenuEntry">
+     <property name="title">
       <string>Create Start menu entry</string>
      </property>
-     <property name="checked">
+     <property name="checkable">
       <bool>true</bool>
      </property>
+     <layout class="QVBoxLayout" name="verticalLayout_2">
+      <item>
+       <widget class="QRadioButton" name="ForThisUserOnly">
+        <property name="text">
+         <string>Create for current user only</string>
+        </property>
+        <property name="checked">
+         <bool>true</bool>
+        </property>
+       </widget>
+      </item>
+      <item>
+       <widget class="QRadioButton" name="ForAllUsers">
+        <property name="text">
+         <string>Create for all users in the system</string>
+        </property>
+       </widget>
+      </item>
+     </layout>
     </widget>
    </item>
   </layout>
