#3188 New plugin for having images stored in database being visible as another tab in the Form View or cell's editing dialog window.

--- a/SQLiteStudio3/guiSQLiteStudio/icons.qrc
+++ b/SQLiteStudio3/guiSQLiteStudio/icons.qrc
@@ -201,5 +201,9 @@
         <file>img/wand.png</file>
         <file>img/search_and_replace.png</file>
         <file>img/search.png</file>
+        <file>img/zoom.png</file>
+        <file>img/zoom_in.png</file>
+        <file>img/zoom_out.png</file>
+        <file>img/save_file.png</file>
     </qresource>
 </RCC>
