--- a/SQLiteStudio3/guiSQLiteStudio/dialogs/configdialog.ui
+++ b/SQLiteStudio3/guiSQLiteStudio/dialogs/configdialog.ui
@@ -229,7 +229,7 @@
           </sizepolicy>
          </property>
          <property name="currentIndex">
-          <number>3</number>
+          <number>1</number>
          </property>
          <widget class="QWidget" name="databaseListPage">
           <layout class="QVBoxLayout" name="verticalLayout_36">
@@ -418,17 +418,30 @@
                   <string>Data browsing and editing</string>
                  </property>
                  <layout class="QGridLayout" name="gridLayout_2">
-                  <item row="1" column="0">
-                   <widget class="QLabel" name="initColWidthLimitLabel">
+                  <item row="2" column="0" colspan="2">
+                   <widget class="QLabel" name="label_2">
                     <property name="toolTip">
-                     <string>&lt;p&gt;When the data is read into grid view columns width is automatically adjusted. This value limits the initial width for the adjustment, but user can still resize the column manually over this limit.&lt;/p&gt;</string>
+                     <string>&lt;p&gt;Maximum number of configurations of Populate Table dialog stored in configuration. Value of 100 should be sufficient.&lt;/p&gt;</string>
                     </property>
                     <property name="text">
-                     <string>Limit initial data column width to (in pixels):</string>
+                     <string>Number of memorized table populating configurations</string>
                     </property>
                    </widget>
                   </item>
-                  <item row="0" column="1">
+                  <item row="2" column="2">
+                   <widget class="QSpinBox" name="spinBox">
+                    <property name="toolTip">
+                     <string>&lt;p&gt;Maximum number of configurations of Populate Table dialog stored in configuration. Value of 100 should be sufficient.&lt;/p&gt;</string>
+                    </property>
+                    <property name="maximum">
+                     <number>999999</number>
+                    </property>
+                    <property name="cfg" stdset="0">
+                     <string>General.PopulateHistorySize</string>
+                    </property>
+                   </widget>
+                  </item>
+                  <item row="0" column="2">
                    <widget class="QSpinBox" name="rowsPerPageSpin">
                     <property name="maximumSize">
                      <size>
@@ -447,7 +460,7 @@
                     </property>
                    </widget>
                   </item>
-                  <item row="1" column="1">
+                  <item row="1" column="2">
                    <widget class="QSpinBox" name="initColWidthLimitSpin">
                     <property name="toolTip">
                      <string>&lt;p&gt;When the data is read into grid view columns width is automatically adjusted. This value limits the initial width for the adjustment, but user can still resize the column manually over this limit.&lt;/p&gt;</string>
@@ -466,7 +479,24 @@
                     </property>
                    </widget>
                   </item>
-                  <item row="2" column="0">
+                  <item row="1" column="0" colspan="2">
+                   <widget class="QLabel" name="initColWidthLimitLabel">
+                    <property name="toolTip">
+                     <string>&lt;p&gt;When the data is read into grid view columns width is automatically adjusted. This value limits the initial width for the adjustment, but user can still resize the column manually over this limit.&lt;/p&gt;</string>
+                    </property>
+                    <property name="text">
+                     <string>Limit initial data column width to (in pixels):</string>
+                    </property>
+                   </widget>
+                  </item>
+                  <item row="0" column="0" colspan="2">
+                   <widget class="QLabel" name="rowsPerPageLabel">
+                    <property name="text">
+                     <string>Number of data rows per page:</string>
+                    </property>
+                   </widget>
+                  </item>
+                  <item row="3" column="0" colspan="3">
                    <widget class="QCheckBox" name="tolltipInDataViewCheck">
                     <property name="toolTip">
                      <string>&lt;p&gt;When this is enabled and user holds mouse pointer over a cell in any data view (query results, a table data, a view data) a tooltip will appear with details about the cell - it includes details like column data type, constraints, ROWID and others.&lt;/p&gt;</string>
@@ -479,14 +509,7 @@
                     </property>
                    </widget>
                   </item>
-                  <item row="0" column="0">
-                   <widget class="QLabel" name="rowsPerPageLabel">
-                    <property name="text">
-                     <string>Number of data rows per page:</string>
-                    </property>
-                   </widget>
-                  </item>
-                  <item row="3" column="0">
+                  <item row="4" column="0" colspan="3">
                    <widget class="QCheckBox" name="keepNullWhenEmptyCheck">
                     <property name="toolTip">
                      <string>&lt;p&gt;When editing a cell which used to have NULL value and entering empty string as new value, then this option determinates whether the new value should remain NULL (have this option enabled), or should it be overwritten with empty string value (have this option disabled).&lt;/p&gt;</string>
@@ -499,7 +522,7 @@
                     </property>
                    </widget>
                   </item>
-                  <item row="4" column="0" colspan="2">
+                  <item row="5" column="0" colspan="3">
                    <widget class="QCheckBox" name="useDefaultForNullCheck">
                     <property name="toolTip">
                      <string>&lt;html&gt;&lt;head/&gt;&lt;body&gt;&lt;p&gt;Enable this to always enforce DEFAULT value when committing a NULL value for a column that has DEFAULT value defined, even though the column is allowed to contain NULL values.&lt;/p&gt;&lt;p&gt;Disable this option to use DEFAULT value exclusively when NULL value is committed for column with NOT NULL constraint.&lt;/p&gt;&lt;/body&gt;&lt;/html&gt;</string>
@@ -837,19 +860,6 @@
                 </property>
                </widget>
               </item>
-              <item row="3" column="0">
-               <widget class="QCheckBox" name="execQueryUnderCursorCheck">
-                <property name="toolTip">
-                 <string>&lt;p&gt;If there is more than one query in the SQL editor window, then (if this option is enabled) only a single query will be executed - the one under the keyboard insertion cursor. Otherwise all queries will be executed. You can always limit queries to be executed by selecting those queries before calling to execute.&lt;/p&gt;</string>
-                </property>
-                <property name="text">
-                 <string>Execute only the query under the cursor</string>
-                </property>
-                <property name="cfg" stdset="0">
-                 <string notr="true">General.ExecuteCurrentQueryOnly</string>
-                </property>
-               </widget>
-              </item>
               <item row="2" column="1">
                <widget class="QSpinBox" name="bindParamLimitSpin">
                 <property name="toolTip">
@@ -860,6 +870,19 @@
                 </property>
                 <property name="cfg" stdset="0">
                  <string>General.BindParamsCacheSize</string>
+                </property>
+               </widget>
+              </item>
+              <item row="3" column="0">
+               <widget class="QCheckBox" name="execQueryUnderCursorCheck">
+                <property name="toolTip">
+                 <string>&lt;p&gt;If there is more than one query in the SQL editor window, then (if this option is enabled) only a single query will be executed - the one under the keyboard insertion cursor. Otherwise all queries will be executed. You can always limit queries to be executed by selecting those queries before calling to execute.&lt;/p&gt;</string>
+                </property>
+                <property name="text">
+                 <string>Execute only the query under the cursor</string>
+                </property>
+                <property name="cfg" stdset="0">
+                 <string notr="true">General.ExecuteCurrentQueryOnly</string>
                 </property>
                </widget>
               </item>
