--- a/SQLiteStudio3/guiSQLiteStudio/windows/viewwindow.ui
+++ b/SQLiteStudio3/guiSQLiteStudio/windows/viewwindow.ui
@@ -29,7 +29,7 @@
    <item>
     <widget class="QTabWidget" name="tabWidget">
      <property name="currentIndex">
-      <number>2</number>
+      <number>0</number>
      </property>
      <widget class="QWidget" name="queryTab">
       <attribute name="title">
@@ -143,7 +143,11 @@
               </item>
              </layout>
             </widget>
-            <widget class="SqlEditor" name="queryEdit"/>
+            <widget class="SqlEditor" name="queryEdit">
+             <property name="lineWrapMode">
+              <enum>QPlainTextEdit::NoWrap</enum>
+             </property>
+            </widget>
            </widget>
           </item>
          </layout>
