#2651 GUI application can only have 1 running instance. Attempting to open another will bring the first one to the front. If opening another as a file association application, the open file will be passed to first instance and open there.

--- a/SQLiteStudio3/coreSQLiteStudio/coreSQLiteStudio.qrc
+++ b/SQLiteStudio3/coreSQLiteStudio/coreSQLiteStudio.qrc
@@ -17,6 +17,7 @@
         <file>licenses/lgpl.txt</file>
         <file>licenses/diff_match.txt</file>
         <file>licenses/gpl.txt</file>
+        <file>licenses/mit.txt</file>
     </qresource>
     <qresource prefix="/msg">
         <file>translations/coreSQLiteStudio_ro_RO.qm</file>
@@ -28,7 +29,3 @@
         <file>translations/coreSQLiteStudio_de.qm</file>
     </qresource>
 </RCC>
-
-
-
-
