#3292 Added possibility to execute huge SQL files directly from disk, without loading them to SQL Editor. Also fixed minor bugs in the low level implementation of Lexer (tokenizer).

--- a/SQLiteStudio3/guiSQLiteStudio/icons.qrc
+++ b/SQLiteStudio3/guiSQLiteStudio/icons.qrc
@@ -210,5 +210,6 @@
         <file>img/brick_delete.png</file>
         <file>img/brick_error.png</file>
         <file>img/brick_folder.png</file>
+        <file>img/execute_sql_from_file.png</file>
     </qresource>
 </RCC>
