--- a/SQLiteStudio3/guiSQLiteStudio/dialogs/newversiondialog.ui
+++ b/SQLiteStudio3/guiSQLiteStudio/dialogs/newversiondialog.ui
@@ -23,7 +23,7 @@
       </font>
      </property>
      <property name="text">
-      <string>New updates are available!</string>
+      <string>New version is available!</string>
      </property>
      <property name="alignment">
       <set>Qt::AlignCenter</set>
@@ -31,69 +31,26 @@
     </widget>
    </item>
    <item>
-    <widget class="QTableWidget" name="updateList">
-     <property name="focusPolicy">
-      <enum>Qt::NoFocus</enum>
+    <widget class="QLabel" name="versionLabel">
+     <property name="font">
+      <font>
+       <pointsize>16</pointsize>
+       <weight>75</weight>
+       <bold>true</bold>
+      </font>
      </property>
-     <property name="editTriggers">
-      <set>QAbstractItemView::NoEditTriggers</set>
+     <property name="text">
+      <string>0.0.0</string>
      </property>
-     <property name="showDropIndicator" stdset="0">
-      <bool>false</bool>
+     <property name="alignment">
+      <set>Qt::AlignCenter</set>
      </property>
-     <property name="selectionMode">
-      <enum>QAbstractItemView::NoSelection</enum>
-     </property>
-     <property name="selectionBehavior">
-      <enum>QAbstractItemView::SelectRows</enum>
-     </property>
-     <property name="verticalScrollMode">
-      <enum>QAbstractItemView::ScrollPerPixel</enum>
-     </property>
-     <property name="showGrid">
-      <bool>false</bool>
-     </property>
-     <attribute name="horizontalHeaderStretchLastSection">
-      <bool>true</bool>
-     </attribute>
-     <attribute name="verticalHeaderVisible">
-      <bool>false</bool>
-     </attribute>
-     <attribute name="verticalHeaderDefaultSectionSize">
-      <number>20</number>
-     </attribute>
-     <attribute name="verticalHeaderMinimumSectionSize">
-      <number>20</number>
-     </attribute>
-     <column>
-      <property name="text">
-       <string>Component</string>
-      </property>
-     </column>
-     <column>
-      <property name="text">
-       <string>Update version</string>
-      </property>
-     </column>
-    </widget>
-   </item>
-   <item>
-    <widget class="QWidget" name="checkOnStartupWidget" native="true">
-     <layout class="QHBoxLayout" name="horizontalLayout">
-      <item>
-       <widget class="QCheckBox" name="checkOnStartupCheck">
-        <property name="text">
-         <string>Check for updates on startup</string>
-        </property>
-       </widget>
-      </item>
-     </layout>
     </widget>
    </item>
    <item>
     <widget class="QCommandLinkButton" name="updateButton">
      <property name="text">
-      <string>Update to new version!</string>
+      <string>Download new version!</string>
      </property>
      <property name="icon">
       <iconset resource="../icons.qrc">
@@ -106,7 +63,27 @@
       </size>
      </property>
      <property name="description">
-      <string>This application will be closed and the update installer will start to download and install all the updates.</string>
+      <string>New version package will be downloaded. It will be up to you to install it whenever you're ready.</string>
+     </property>
+    </widget>
+   </item>
+   <item>
+    <widget class="QCommandLinkButton" name="homepageButton">
+     <property name="text">
+      <string>Open SQLiteStudio home page.</string>
+     </property>
+     <property name="icon">
+      <iconset resource="../icons.qrc">
+       <normaloff>:/icons/img/sqlitestudio.svg</normaloff>:/icons/img/sqlitestudio.svg</iconset>
+     </property>
+     <property name="iconSize">
+      <size>
+       <width>24</width>
+       <height>24</height>
+      </size>
+     </property>
+     <property name="description">
+      <string>Read release notes &amp;&amp; download package yourself.</string>
      </property>
     </widget>
    </item>
@@ -126,8 +103,21 @@
       </size>
      </property>
      <property name="description">
-      <string>Don't install the update and close this window.</string>
+      <string>Just close this window.</string>
      </property>
+    </widget>
+   </item>
+   <item>
+    <widget class="QWidget" name="checkOnStartupWidget" native="true">
+     <layout class="QHBoxLayout" name="horizontalLayout">
+      <item>
+       <widget class="QCheckBox" name="checkOnStartupCheck">
+        <property name="text">
+         <string>Check for updates on startup</string>
+        </property>
+       </widget>
+      </item>
+     </layout>
     </widget>
    </item>
   </layout>
