#3470 #3726 Upgraded SQLite to 3.34.1 and enhanced syntax definition to support GENERATED columns. Table Window also supports GENERATED constraint now. Still the Table Edit dialog does not - this is pending. Also other features of recent SQLite are pending (such as windowing functions and enhanced column renaming with ALTER TABLE).

--- a/SQLiteStudio3/guiSQLiteStudio/icons.qrc
+++ b/SQLiteStudio3/guiSQLiteStudio/icons.qrc
@@ -199,5 +199,8 @@
         <file>img/dock_layout_horizontal.png</file>
         <file>img/dock_layout_vertical.png</file>
         <file>img/keyboard.png</file>
+        <file>img/disk_small.png</file>
+        <file>img/generated.png</file>
+        <file>img/lightning_small.png</file>
     </qresource>
 </RCC>
