--- a/SQLiteStudio3/guiSQLiteStudio/dialogs/columndialog.ui
+++ b/SQLiteStudio3/guiSQLiteStudio/dialogs/columndialog.ui
@@ -6,8 +6,8 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>424</width>
-    <height>360</height>
+    <width>467</width>
+    <height>393</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -109,27 +109,6 @@
         </property>
         <widget class="QWidget" name="simplePage">
          <layout class="QGridLayout" name="gridLayout_2">
-          <item row="3" column="0">
-           <widget class="QCheckBox" name="uniqueCheck">
-            <property name="text">
-             <string>Unique</string>
-            </property>
-           </widget>
-          </item>
-          <item row="1" column="1">
-           <widget class="QToolButton" name="pkButton">
-            <property name="text">
-             <string>Configure</string>
-            </property>
-           </widget>
-          </item>
-          <item row="2" column="0">
-           <widget class="QCheckBox" name="fkCheck">
-            <property name="text">
-             <string>Foreign Key</string>
-            </property>
-           </widget>
-          </item>
           <item row="2" column="1">
            <widget class="QToolButton" name="fkButton">
             <property name="text">
@@ -137,10 +116,10 @@
             </property>
            </widget>
           </item>
-          <item row="6" column="0">
-           <widget class="QCheckBox" name="collateCheck">
+          <item row="7" column="0">
+           <widget class="QCheckBox" name="generatedCheck">
             <property name="text">
-             <string>Collate</string>
+             <string>Generated value</string>
             </property>
            </widget>
           </item>
@@ -151,6 +130,20 @@
             </property>
            </widget>
           </item>
+          <item row="2" column="0">
+           <widget class="QCheckBox" name="fkCheck">
+            <property name="text">
+             <string>Foreign Key</string>
+            </property>
+           </widget>
+          </item>
+          <item row="6" column="0">
+           <widget class="QCheckBox" name="collateCheck">
+            <property name="text">
+             <string>Collate</string>
+            </property>
+           </widget>
+          </item>
           <item row="4" column="0">
            <widget class="QCheckBox" name="checkCheck">
             <property name="text">
@@ -158,17 +151,10 @@
             </property>
            </widget>
           </item>
-          <item row="1" column="0">
-           <widget class="QCheckBox" name="pkCheck">
+          <item row="3" column="0">
+           <widget class="QCheckBox" name="uniqueCheck">
             <property name="text">
-             <string>Primary Key</string>
-            </property>
-           </widget>
-          </item>
-          <item row="7" column="0">
-           <widget class="QCheckBox" name="defaultCheck">
-            <property name="text">
-             <string>Default</string>
+             <string>Unique</string>
             </property>
            </widget>
           </item>
@@ -179,10 +165,10 @@
             </property>
            </widget>
           </item>
-          <item row="4" column="1">
-           <widget class="QToolButton" name="checkButton">
+          <item row="1" column="0">
+           <widget class="QCheckBox" name="pkCheck">
             <property name="text">
-             <string>Configure</string>
+             <string>Primary Key</string>
             </property>
            </widget>
           </item>
@@ -200,8 +186,36 @@
             </property>
            </widget>
           </item>
-          <item row="7" column="1">
+          <item row="8" column="1">
            <widget class="QToolButton" name="defaultButton">
+            <property name="text">
+             <string>Configure</string>
+            </property>
+           </widget>
+          </item>
+          <item row="1" column="1">
+           <widget class="QToolButton" name="pkButton">
+            <property name="text">
+             <string>Configure</string>
+            </property>
+           </widget>
+          </item>
+          <item row="8" column="0">
+           <widget class="QCheckBox" name="defaultCheck">
+            <property name="text">
+             <string>Default</string>
+            </property>
+           </widget>
+          </item>
+          <item row="4" column="1">
+           <widget class="QToolButton" name="checkButton">
+            <property name="text">
+             <string>Configure</string>
+            </property>
+           </widget>
+          </item>
+          <item row="7" column="1">
+           <widget class="QToolButton" name="generatedButton">
             <property name="text">
              <string>Configure</string>
             </property>
