#3269 Enhanced handling of big data cells - they are still limited at first, but now there is an indicator (button) showing up when there is more to load and user can press it to load full data for the cell. User can also load full values in entire column using right-click on the column's header and picking option from context menu.

--- a/SQLiteStudio3/guiSQLiteStudio/icons.qrc
+++ b/SQLiteStudio3/guiSQLiteStudio/icons.qrc
@@ -202,5 +202,7 @@
         <file>img/disk_small.png</file>
         <file>img/generated.png</file>
         <file>img/lightning_small.png</file>
+        <file>img/load_full_value.png</file>
+        <file>img/load_full_values.png</file>
     </qresource>
 </RCC>
