#3266 Added Ctrl+Q and entry in menu for quitting the application.

--- a/SQLiteStudio3/guiSQLiteStudio/icons.qrc
+++ b/SQLiteStudio3/guiSQLiteStudio/icons.qrc
@@ -204,5 +204,6 @@
         <file>img/lightning_small.png</file>
         <file>img/load_full_value.png</file>
         <file>img/load_full_values.png</file>
+        <file>img/quit.png</file>
     </qresource>
 </RCC>
