#3975 Database dropdowns added to table & view windows, to it's more clear to which database particular object belongs. The same database dropdown in SQL Editor is moved to the left side, to be more consistent across the application. Main toolbar ha snow way less unnecessary buttons.

--- a/SQLiteStudio3/guiSQLiteStudio/windows/tablewindow.ui
+++ b/SQLiteStudio3/guiSQLiteStudio/windows/tablewindow.ui
@@ -55,6 +55,16 @@
            <number>2</number>
           </property>
           <item>
+           <widget class="DbComboBox" name="dbCombo">
+            <property name="maximumSize">
+             <size>
+              <width>200</width>
+              <height>16777215</height>
+             </size>
+            </property>
+           </widget>
+          </item>
+          <item>
            <widget class="QLabel" name="tableNameLabel">
             <property name="text">
              <string>Table name:</string>
@@ -316,6 +326,11 @@
    <class>ExtTableWidget</class>
    <extends>QTableWidget</extends>
    <header>common/exttablewidget.h</header>
+  </customwidget>
+  <customwidget>
+   <class>DbComboBox</class>
+   <extends>QComboBox</extends>
+   <header>common/dbcombobox.h</header>
   </customwidget>
  </customwidgets>
  <resources/>
