--- a/SQLiteStudio3/guiSQLiteStudio/windows/viewwindow.ui
+++ b/SQLiteStudio3/guiSQLiteStudio/windows/viewwindow.ui
@@ -55,6 +55,16 @@
            <number>2</number>
           </property>
           <item>
+           <widget class="DbComboBox" name="dbCombo">
+            <property name="maximumSize">
+             <size>
+              <width>200</width>
+              <height>16777215</height>
+             </size>
+            </property>
+           </widget>
+          </item>
+          <item>
            <widget class="QLabel" name="nameLabel">
             <property name="text">
              <string>View name:</string>
@@ -228,14 +238,19 @@
    <container>1</container>
   </customwidget>
   <customwidget>
-   <class>SqlEditor</class>
-   <extends>QPlainTextEdit</extends>
-   <header>sqleditor.h</header>
-  </customwidget>
-  <customwidget>
    <class>ExtTableWidget</class>
    <extends>QTableWidget</extends>
    <header>common/exttablewidget.h</header>
+  </customwidget>
+  <customwidget>
+   <class>DbComboBox</class>
+   <extends>QComboBox</extends>
+   <header>common/dbcombobox.h</header>
+  </customwidget>
+  <customwidget>
+   <class>SqlEditor</class>
+   <extends>QPlainTextEdit</extends>
+   <header>sqleditor.h</header>
   </customwidget>
  </customwidgets>
  <resources/>
